<!-- 03/06/2022 | 10119239 | DEA INESIA SRI UTAMI | IF6 -->
<resources>
    <string name="app_name">UTSPraktik-IF6-10119239-DeaInesiaSriUtami</string>
    <string name="title_isi_data">Form Pengisian Data</string>
    <string name="info">Info</string>
    <string name="desc_isi_data">Form berikut ini bertujuan untuk memberikan informasi kepada pusat agar dapat mudah dilaporkan</string>
    <string name="jenis_tes">Jenis Tes</string>
    <string name="required">Harus Diisi</string>
    <string name="rapid">Rapid Antigen</string>
    <string name="pcr">PCR</string>
    <string name="tgl_konfir">Tanggal Terkonfirmasi</string>
    <string name="ph_tgl">Pilih Tanggal</string>
    <string name="nik">NIK</string>
    <string name="ph_nik">Masukkan NIK</string>
    <string name="nama">Nama</string>
    <string name="ph_nama">Masukkan Nama</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pr">Perempuan</string>
    <string name="lk">Laki - laki</string>
    <string name="hubungan">Hubungan dengan Anda</string>
    <string name="org_tua">Orangtua</string>
    <string name="suami_istri">Suami/Istri</string>
    <string name="anak">Anak</string>
    <string name="kerabat">Kerabat Lainnya</string>
    <string name="tnc">Dengan ini saya menyetujui bahwa data yang saya isikan adalah benar</string>
    <string name="next">Selanjutnya</string>
</resources>